--- a/css/custom.css
+++ b/css/custom.css
@@ -45,7 +45,7 @@ p {
     right: 0;
     bottom: 0;
     left: 0;
-    background: #59C1BD;
+    background: #39b49a;
     z-index: 11000;
     position: fixed;
     display: flex;
